index html sections added

--- a/index.html
+++ b/index.html
@@ -12,11 +12,32 @@
 </head>
 
 <body>
+    <section class="navigation">
+        <header class="container">
+
+        </header>
+    </section>
+
+    <section class="container logo-banner">
+
+    </section>
+
+    <section class="container game-controls">
+
+    </section>
+
+    <section class="container game-section">
+
+    </section>
+
+    <section class="footer-section">
+        <div class="container footer">
+
+        </div>
+    </section>
 
 
 
-
-    
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
