site logo and container styled

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-colour sticky-top">
                 <div class="container">
-                    <a class="navbar-brand" href="index.html"><img src="assets/images/iconfinder_Avengers_marvel_movie_comic_book_action_3151604-Avengers.svg" alt="Avengers Snap Logo"></a>
+                    <a class="navbar-brand" href="index.html"><img
+                            src="assets/images/iconfinder_Avengers_marvel_movie_comic_book_action_3151604-Avengers.svg"
+                            alt="Avengers Snap Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -37,7 +39,10 @@
     </section>
 
     <section class="container logo-banner">
-
+        <div class="banner-container">
+            <div class="avengers-banner">
+            </div>
+        </div>
     </section>
 
     <section class="container game-controls">
