game control placeholders added

--- a/index.html
+++ b/index.html
@@ -46,11 +46,31 @@
     </section>
 
     <section class="container game-controls">
-
+        <div class="d-flex">
+            <div class="p-2">
+                <a class="btn btn-warning" href="#" role="button" aria-label="Difficulty">Difficulty</a>
+            </div>
+            <div class="p-2">
+                <a class="btn btn-warning" href="#" role="button" aria-label="Reset Game"><i
+                        class="fas fa-redo"></i></a>
+            </div>
+            <div class="mr-auto p-2">
+                <a class="btn btn-warning" href="#" role="button" aria-label="Audio Settings"><i
+                        class="fas fa-music"></i></a>
+            </div>
+            <div class="p-2">
+                <div class="text-box move-counter">Moves: X</div>
+            </div>
+            <div class="p-2">
+                <div class="text-box timer">Time: X:XX</div>
+            </div>
+        </div>
     </section>
 
     <section class="container game-section">
+        <div class="game-panel">
 
+        </div>
     </section>
 
     <section class="footer-section">
