--- a/index.html
+++ b/index.html
@@ -46,23 +46,27 @@
     </section>
 
     <section class="container game-controls">
-        <div class="d-flex">
-            <div class="p-2">
-                <a class="btn btn-warning" href="#" role="button" aria-label="Difficulty">Difficulty</a>
+        <div class="flex-column d-flex align-items-center flex-sm-row justify-content-sm-between">
+            <div class="d-flex">
+                <div class="p-left-0">
+                    <a class="btn btn-warning" href="#" role="button" aria-label="Difficulty">Difficulty</a>
+                </div>
+                <div class="p-2">
+                    <a class="btn btn-warning" href="#" role="button" aria-label="Reset Game"><i
+                            class="fas fa-redo"></i></a>
+                </div>
+                <div class="p-right-0">
+                    <a class="btn btn-warning" href="#" role="button" aria-label="Audio Settings"><i
+                            class="fas fa-music"></i></a>
+                </div>
             </div>
-            <div class="p-2">
-                <a class="btn btn-warning" href="#" role="button" aria-label="Reset Game"><i
-                        class="fas fa-redo"></i></a>
-            </div>
-            <div class="mr-auto p-2">
-                <a class="btn btn-warning" href="#" role="button" aria-label="Audio Settings"><i
-                        class="fas fa-music"></i></a>
-            </div>
-            <div class="p-2">
-                <div class="text-box move-counter">Moves: X</div>
-            </div>
-            <div class="p-2">
-                <div class="text-box timer">Time: X:XX</div>
+            <div class="d-flex float-right">
+                <div class="p-left-0">
+                    <div class="text-box move-counter">Moves: X</div>
+                </div>
+                <div class="p-right-0">
+                    <div class="text-box timer">Time: X:XX</div>
+                </div>
             </div>
         </div>
     </section>
