footer added semi-styled

--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
         </div>
     </section>
 
-    <section class="footer-section">
-        <div class="container footer">
-
+    <section class="footer-section sticky-bottom">
+        <div class="container footer text-center d-flex justify-content-center">
+            <div class="footer-info">
+                <p>&#169;Russell Oakham</p>
+                <a href="https://github.com/RussOakham/"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"><i class="fab fa-linkedin"></i></a>
+            </div>
         </div>
     </section>
 
