footer sticky bottom

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <section class="footer-section sticky-bottom">
+    <section class="footer-section">
         <div class="container footer text-center d-flex justify-content-center">
             <div class="footer-info">
                 <p>&#169;Russell Oakham</p>
