--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar navbar-expand-lg navbar-light navbar-colour sticky-top">
                 <div class="container">
                     <a class="navbar-brand" href="index.html"><img
-                            src="assets/images/iconfinder_Avengers_marvel_movie_comic_book_action_3151604-Avengers.svg"
+                            src="assets/images/Avengers.svg"
                             alt="Avengers Snap Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
