initial game cards added and styled

--- a/index.html
+++ b/index.html
@@ -73,7 +73,54 @@
 
     <section class="container game-section">
         <div class="game-panel">
-
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/captainamerica.svg" alt="Captain America">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/captainamerica.svg" alt="Captain America">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/daredevil.svg" alt="Daredevil">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/daredevil.svg" alt="Daredevil">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/groot.svg" alt="Groot">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/groot.svg" alt="Groot">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/antman.svg" alt="Antman">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/antman.svg" alt="Antman">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/hawkeye.svg" alt="Hawkeye">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/hawkeye.svg" alt="Hawkeye">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/ironman.svg" alt="Iron Man">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/ironman.svg" alt="Iron Man">
+                <img class="back-face" src="assets/images/Avengers.svg" alt="Avenger Card">
+            </div>
         </div>
     </section>
 
