--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="d-flex float-right">
                 <div class="p-left-0">
-                    <div class="text-box move-counter">Moves: X</div>
+                    <div class="text-box move-counter">Moves: <span class="moves">0</span></div>
                 </div>
                 <div class="p-right-0">
                     <div class="text-box timer">Time: X:XX</div>
