startTimer function added, called when first round completed

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             </div>
             <div class="d-flex float-right">
                 <div class="p-left-0">
-                    <div class="text-box move-counter">Moves: <span class="moves">0</span></div>
+                    <div class="text-box">Moves: <span class="moves">0</span></div>
                 </div>
                 <div class="p-right-0">
-                    <div class="text-box timer">Time: X:XX</div>
+                    <div class="text-box">Time: <span class="timer">0:00</span></div>
                 </div>
             </div>
         </div>
