--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
                         Welcome to Avenger's Snap!<br>The memory game based on your favourite Marvel Avengers characters!
                     </p>
                     <p>
-                        The aim of the game is simple, match cards via flipping them on the board. Once all cards of flipped - the game is complete! Aim to complete the game in as few moves and as short a time as possible!
+                        The aim of the game is simple, match two cards via flipping them on the game board.<br>Once all cards are flipped - the game is complete!<br>Aim to complete the game in as few moves and as short a time as possible!
                     </p>
-                    <p>Select one of the difficulty settings below to start the game!</p>
+                    <p>Select a difficulty setting below to start the game!</p>
                 </div>
                 <div class="modal-footer justify-content-center">
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-warning">Easy</button>
                 </div>
             </div>
         </div>
