difficulty buttons added to ltp modal and styled

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="navigation">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light navbar-colour sticky-top">
+            <nav class="navbar navbar-expand-lg navbar-light navbar-colour sticky-top bangers-font">
                 <div class="container">
                     <a class="navbar-brand" href="index.html"><img src="assets/images/Avengers.svg"
                             alt="Avengers Snap Logo"></a>
@@ -44,7 +44,7 @@
         </div>
     </section>
 
-    <section class="container game-controls">
+    <section class="container game-controls bangers-font">
         <div class="flex-column d-flex align-items-center flex-sm-row justify-content-sm-between">
             <div class="d-flex">
                 <div class="p-left-0">
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <section class="footer-section">
+    <section class="footer-section bangers-font">
         <div class="container footer text-center d-flex justify-content-center">
             <div class="footer-info">
                 <p>&#169;Russell Oakham</p>
@@ -142,7 +142,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header justify-content-center">
-                    <h5 class="modal-title" id="exampleModalLongTitle">How To Play</h5>
+                    <h5 class="modal-title bangers-font" id="exampleModalLongTitle">How To Play</h5>
                 </div>
                 <div class="modal-body text-center">
                     <p>
@@ -153,8 +153,10 @@
                     </p>
                     <p>Select a difficulty setting below to start the game!</p>
                 </div>
-                <div class="modal-footer justify-content-center">
-                    <button type="button" class="btn btn-warning">Easy</button>
+                <div class="modal-footer justify-content-center bangers-font">
+                    <button type="button" class="btn btn-warning btn-easy">Easy</button>
+                    <button type="button" class="btn btn-warning btn-medium">Medium</button>
+                    <button type="button" class="btn btn-warning btn-hard">Hard</button>
                 </div>
             </div>
         </div>
