container max width to ensure content is only 6 game cards wide

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="navigation">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-colour sticky-top bangers-font">
-                <div class="container">
+                <div class="container container-max-width">
                     <a class="navbar-brand" href="index.html"><img src="assets/images/Avengers.svg"
                             alt="Avengers Snap Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -37,14 +37,14 @@
         </header>
     </section>
 
-    <section class="container logo-banner">
+    <section class="container logo-banner container-max-width">
         <div class="banner-container">
             <div class="avengers-banner">
             </div>
         </div>
     </section>
 
-    <section class="container game-controls bangers-font">
+    <section class="container game-controls bangers-font container-max-width">
         <div class="flex-column d-flex align-items-center flex-sm-row justify-content-sm-between">
             <div class="d-flex">
                 <div class="p-left-0">
@@ -70,7 +70,7 @@
         </div>
     </section>
 
-    <section class="container game-section">
+    <section class="container game-section container-max-width">
         <div class="game-panel">
             <div class="memory-card" data-avenger="captain-america">
                 <img class="front-face" src="assets/images/captainamerica.svg" alt="Captain America">
@@ -124,7 +124,7 @@
     </section>
 
     <section class="footer-section bangers-font">
-        <div class="container footer text-center d-flex justify-content-center">
+        <div class="container footer text-center d-flex justify-content-center container-max-width">
             <div class="footer-info">
                 <p>&#169;Russell Oakham</p>
                 <a href="https://github.com/RussOakham/"><i class="fab fa-github"></i></a>
