resetBoard function added - cards clear before repopulating when changing game difficulty

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            <a class="nav-link" href="#ltp-modal" data-bs-toggle="modal" data-targe="#ltp-modal">How To Play</a>
+                            <a class="nav-link" href="#ltp-modal" data-bs-toggle="modal" data-target="#ltp-modal">How To Play</a>
                             <a class="nav-link" href="#">Avengers</a>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
         <div class="flex-column d-flex align-items-center flex-sm-row justify-content-sm-between">
             <div class="d-flex">
                 <div class="p-left-0">
-                    <a class="btn btn-warning" href="#" role="button" aria-label="Difficulty">Difficulty</a>
+                    <a class="btn btn-warning" href="#ltp-modal" data-target="#ltp-modal" data-bs-toggle="modal" role="button" aria-label="Difficulty">Difficulty</a>
                 </div>
                 <div class="p-2">
                     <button class="btn btn-warning" href="#" role="button" aria-label="Reset Game"><i
