resetCurrentGame function added - regenerates board based on current difficulty choice and resets moves and timers.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a class="btn btn-warning" href="#ltp-modal" data-target="#ltp-modal" data-bs-toggle="modal" role="button" aria-label="Difficulty">Difficulty</a>
                 </div>
                 <div class="p-2">
-                    <button class="btn btn-warning" href="#" role="button" aria-label="Reset Game"><i
+                    <button class="btn btn-warning" onclick="resetCurrentGame ()" id="reset-btn" role="button" aria-label="Reset Game"><i
                             class="fas fa-redo"></i></button>
                 </div>
                 <div class="p-right-0">
