congrats modal - now shows difficulty completed, moves and time taken

--- a/index.html
+++ b/index.html
@@ -125,11 +125,12 @@
                 </div>
                 <div class="modal-body text-center">
                     <p>
-                        You've completed the `${app.difficultyLevel}` of Avenger's Snap!<br>
+                        You've completed the <span id="diff-level">xx</span> level of Avenger's Snap!<br>
                     </p>
                     <p>
-                        The aim of the game is simple, match two cards via flipping them on the game board.<br>Once all cards are flipped - the game is complete!<br>Aim to complete the game in as few moves and as short a time as possible!
+                        You made <span id="move-score"></span> moves!<br>You took <span id="time-score"></span>
                     </p>
+                    <p>Why not try again on a higher difficulty?<br>Or aim to repeat the current level in less moves and time!</p>
                     <p>Select a difficulty setting below to start a new game!</p>
                 </div>
                 <div class="modal-footer justify-content-center bangers-font">
