congrats modal - removed difficulty level in text, due to showing 'easy2' on replays

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <p>
-                        You've completed the <span id="diff-level">xx</span> level of Avenger's Snap!<br>
+                        You've completed Avenger's Snap!<br>
                     </p>
                     <p>
                         You made <span id="move-score"></span> moves!<br>You took <span id="time-score"></span>
