--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/modals.js"></script>
+    <script src="assets/js/audio.js"></script>
 </body>
 
 </html>
